assignment1/src/main/CSlang/parser/.antlr/CSlangParser.py
# Generated from d://ASSPPL//AssignmentPPL//assignment1//src//main//CSlang//parser//CSlang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CSlangParser ( Parser ):

    grammarFileName = "CSlang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'break'", "'continue'", "'if'", "'else'", 
                     "'for'", "'true'", "'false'", "'int'", "'float'", "'bool'", 
                     "'string'", "'return'", "'null'", "'class'", "'constructor'", 
                     "'var'", "'self'", "'new'", "'void'", "'const'", "'func'", 
                     "'&&'", "'||'", "'=='", "':='", "'!='", "'<'", "'>'", 
                     "'<='", "'>='", "'<-'", "'+'", "'-'", "'*'", "'/'", 
                     "'\\'", "'!'", "'='", "'^'", "'%'", "','", "';'", "':'", 
                     "'.'", "'('", "')'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CONTINUE", "IF", "ELSE", "FOR", 
                      "TRUE", "FALSE", "INT", "FLOAT", "BOOL", "STRING", 
                      "RETURN", "NULL", "CLASS", "CONSTRUCTOR", "VAR", "SELF", 
                      "NEW", "VOID", "CONST", "FUNC", "AND", "OR", "EQUAL", 
                      "ASSIGN", "NOT_EQUAL", "LESS_THAN", "GREATER_THAN", 
                      "LESS_THAN_EQUAL", "GREATER_THAN_EQUAL", "SUPERCLASS", 
                      "ADD", "SUB", "MUL", "DIV_FLOAT", "DIV_INT", "NOT", 
                      "EQ", "STRING_CONCAT", "MOD", "COMMA", "SEMI", "COLON", 
                      "DOT", "LP", "RP", "LSB", "RSB", "LB", "RB", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "WS", "INTARR", "INTLIT", "FLOATLIT", 
                      "STRINGLIT", "ID", "STATIC_ID", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_class_declarelist = 1
    RULE_class_declare = 2
    RULE_name_class = 3
    RULE_name_superclass = 4
    RULE_body_class_list = 5
    RULE_body_class_prime = 6
    RULE_body_class = 7
    RULE_attribute_declare = 8
    RULE_attdecl_ = 9
    RULE_indenlist = 10
    RULE_attdecl = 11
    RULE_varlist = 12
    RULE_type_att = 13
    RULE_primitive_type = 14
    RULE_primitive_type_ = 15
    RULE_array_type = 16
    RULE_element_type = 17
    RULE_class_type = 18
    RULE_method_declare = 19
    RULE_paramlist = 20
    RULE_paramprime = 21
    RULE_param = 22
    RULE_idlist = 23
    RULE_type_return = 24
    RULE_constructor_declare = 25
    RULE_blockstmt = 26
    RULE_stmtlist = 27
    RULE_stmtprime = 28
    RULE_stmt = 29
    RULE_var_and_const_declstmt = 30
    RULE_varstmt_decl = 31
    RULE_variable_namelist = 32
    RULE_varstmt_declass = 33
    RULE_assignment_stmt = 34
    RULE_assign_lhs = 35
    RULE_index_exp_for_scalar_variable = 36
    RULE_if_stmt = 37
    RULE_assignstmt = 38
    RULE_for_stmt = 39
    RULE_break_stmt = 40
    RULE_continue_stmt = 41
    RULE_return_stmt = 42
    RULE_method_invocation_stmt = 43
    RULE_method_invocation = 44
    RULE_static_method_invocation = 45
    RULE_name_class_access = 46
    RULE_instance_method_invocation = 47
    RULE_pre_exp = 48
    RULE_expr = 49
    RULE_expr1 = 50
    RULE_expr2 = 51
    RULE_expr3 = 52
    RULE_expr4 = 53
    RULE_expr5 = 54
    RULE_expr6 = 55
    RULE_expr7 = 56
    RULE_expr8 = 57
    RULE_expr9 = 58
    RULE_expr10 = 59
    RULE_funcall = 60
    RULE_static_funcall = 61
    RULE_operands = 62
    RULE_literals = 63
    RULE_literal_array = 64
    RULE_boolean_literal = 65
    RULE_array_literal = 66
    RULE_litarray_list = 67
    RULE_exp_list = 68
    RULE_index_operator = 69
    RULE_attribute_name = 70
    RULE_identifier_name = 71

    ruleNames =  [ "program", "class_declarelist", "class_declare", "name_class", 
                   "name_superclass", "body_class_list", "body_class_prime", 
                   "body_class", "attribute_declare", "attdecl_", "indenlist", 
                   "attdecl", "varlist", "type_att", "primitive_type", "primitive_type_", 
                   "array_type", "element_type", "class_type", "method_declare", 
                   "paramlist", "paramprime", "param", "idlist", "type_return", 
                   "constructor_declare", "blockstmt", "stmtlist", "stmtprime", 
                   "stmt", "var_and_const_declstmt", "varstmt_decl", "variable_namelist", 
                   "varstmt_declass", "assignment_stmt", "assign_lhs", "index_exp_for_scalar_variable", 
                   "if_stmt", "assignstmt", "for_stmt", "break_stmt", "continue_stmt", 
                   "return_stmt", "method_invocation_stmt", "method_invocation", 
                   "static_method_invocation", "name_class_access", "instance_method_invocation", 
                   "pre_exp", "expr", "expr1", "expr2", "expr3", "expr4", 
                   "expr5", "expr6", "expr7", "expr8", "expr9", "expr10", 
                   "funcall", "static_funcall", "operands", "literals", 
                   "literal_array", "boolean_literal", "array_literal", 
                   "litarray_list", "exp_list", "index_operator", "attribute_name", 
                   "identifier_name" ]

    EOF = Token.EOF
    BREAK=1
    CONTINUE=2
    IF=3
    ELSE=4
    FOR=5
    TRUE=6
    FALSE=7
    INT=8
    FLOAT=9
    BOOL=10
    STRING=11
    RETURN=12
    NULL=13
    CLASS=14
    CONSTRUCTOR=15
    VAR=16
    SELF=17
    NEW=18
    VOID=19
    CONST=20
    FUNC=21
    AND=22
    OR=23
    EQUAL=24
    ASSIGN=25
    NOT_EQUAL=26
    LESS_THAN=27
    GREATER_THAN=28
    LESS_THAN_EQUAL=29
    GREATER_THAN_EQUAL=30
    SUPERCLASS=31
    ADD=32
    SUB=33
    MUL=34
    DIV_FLOAT=35
    DIV_INT=36
    NOT=37
    EQ=38
    STRING_CONCAT=39
    MOD=40
    COMMA=41
    SEMI=42
    COLON=43
    DOT=44
    LP=45
    RP=46
    LSB=47
    RSB=48
    LB=49
    RB=50
    LINE_COMMENT=51
    BLOCK_COMMENT=52
    WS=53
    INTARR=54
    INTLIT=55
    FLOATLIT=56
    STRINGLIT=57
    ID=58
    STATIC_ID=59
    ERROR_CHAR=60
    UNCLOSE_STRING=61
    ILLEGAL_ESCAPE=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_declarelist(self):
            return self.getTypedRuleContext(CSlangParser.Class_declarelistContext,0)


        def EOF(self):
            return self.getToken(CSlangParser.EOF, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_program




    def program(self):

        localctx = CSlangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.class_declarelist()
            self.state = 145
            self.match(CSlangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declarelistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_declare(self):
            return self.getTypedRuleContext(CSlangParser.Class_declareContext,0)


        def class_declarelist(self):
            return self.getTypedRuleContext(CSlangParser.Class_declarelistContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_class_declarelist




    def class_declarelist(self):

        localctx = CSlangParser.Class_declarelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_declarelist)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.class_declare()
                self.state = 148
                self.class_declarelist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.class_declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(CSlangParser.CLASS, 0)

        def name_class(self):
            return self.getTypedRuleContext(CSlangParser.Name_classContext,0)


        def name_superclass(self):
            return self.getTypedRuleContext(CSlangParser.Name_superclassContext,0)


        def LB(self):
            return self.getToken(CSlangParser.LB, 0)

        def body_class_list(self):
            return self.getTypedRuleContext(CSlangParser.Body_class_listContext,0)


        def RB(self):
            return self.getToken(CSlangParser.RB, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_class_declare




    def class_declare(self):

        localctx = CSlangParser.Class_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(CSlangParser.CLASS)
            self.state = 154
            self.name_class()
            self.state = 155
            self.name_superclass()
            self.state = 156
            self.match(CSlangParser.LB)
            self.state = 157
            self.body_class_list()
            self.state = 158
            self.match(CSlangParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Name_classContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CSlangParser.ID, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_name_class




    def name_class(self):

        localctx = CSlangParser.Name_classContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_name_class)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(CSlangParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Name_superclassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUPERCLASS(self):
            return self.getToken(CSlangParser.SUPERCLASS, 0)

        def ID(self):
            return self.getToken(CSlangParser.ID, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_name_superclass




    def name_superclass(self):

        localctx = CSlangParser.Name_superclassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_name_superclass)
        try:
            self.state = 165
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 162
                self.match(CSlangParser.SUPERCLASS)
                self.state = 163
                self.match(CSlangParser.ID)
                pass
            elif token in [49]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_class_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body_class_prime(self):
            return self.getTypedRuleContext(CSlangParser.Body_class_primeContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_body_class_list




    def body_class_list(self):

        localctx = CSlangParser.Body_class_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_body_class_list)
        try:
            self.state = 169
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16, 20, 21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.body_class_prime()
                pass
            elif token in [50]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_class_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body_class(self):
            return self.getTypedRuleContext(CSlangParser.Body_classContext,0)


        def body_class_prime(self):
            return self.getTypedRuleContext(CSlangParser.Body_class_primeContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_body_class_prime




    def body_class_prime(self):

        localctx = CSlangParser.Body_class_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_body_class_prime)
        try:
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.body_class()
                self.state = 172
                self.body_class_prime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.body_class()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_classContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_declare(self):
            return self.getTypedRuleContext(CSlangParser.Attribute_declareContext,0)


        def method_declare(self):
            return self.getTypedRuleContext(CSlangParser.Method_declareContext,0)


        def constructor_declare(self):
            return self.getTypedRuleContext(CSlangParser.Constructor_declareContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_body_class




    def body_class(self):

        localctx = CSlangParser.Body_classContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_body_class)
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.attribute_declare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 178
                self.method_declare()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 179
                self.constructor_declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attdecl_(self):
            return self.getTypedRuleContext(CSlangParser.Attdecl_Context,0)


        def attdecl(self):
            return self.getTypedRuleContext(CSlangParser.AttdeclContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_attribute_declare




    def attribute_declare(self):

        localctx = CSlangParser.Attribute_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attribute_declare)
        try:
            self.state = 184
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 182
                self.attdecl_()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 183
                self.attdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attdecl_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_name(self):
            return self.getTypedRuleContext(CSlangParser.Attribute_nameContext,0)


        def indenlist(self):
            return self.getTypedRuleContext(CSlangParser.IndenlistContext,0)


        def COLON(self):
            return self.getToken(CSlangParser.COLON, 0)

        def type_att(self):
            return self.getTypedRuleContext(CSlangParser.Type_attContext,0)


        def SEMI(self):
            return self.getToken(CSlangParser.SEMI, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_attdecl_




    def attdecl_(self):

        localctx = CSlangParser.Attdecl_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_attdecl_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.attribute_name()
            self.state = 187
            self.indenlist()
            self.state = 188
            self.match(CSlangParser.COLON)
            self.state = 189
            self.type_att()
            self.state = 190
            self.match(CSlangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndenlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier_name(self):
            return self.getTypedRuleContext(CSlangParser.Identifier_nameContext,0)


        def COMMA(self):
            return self.getToken(CSlangParser.COMMA, 0)

        def indenlist(self):
            return self.getTypedRuleContext(CSlangParser.IndenlistContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_indenlist




    def indenlist(self):

        localctx = CSlangParser.IndenlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_indenlist)
        try:
            self.state = 197
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 192
                self.identifier_name()
                self.state = 193
                self.match(CSlangParser.COMMA)
                self.state = 194
                self.indenlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 196
                self.identifier_name()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_name(self):
            return self.getTypedRuleContext(CSlangParser.Attribute_nameContext,0)


        def identifier_name(self):
            return self.getTypedRuleContext(CSlangParser.Identifier_nameContext,0)


        def varlist(self):
            return self.getTypedRuleContext(CSlangParser.VarlistContext,0)


        def expr(self):
            return self.getTypedRuleContext(CSlangParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(CSlangParser.SEMI, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_attdecl




    def attdecl(self):

        localctx = CSlangParser.AttdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_attdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self.attribute_name()
            self.state = 200
            self.identifier_name()
            self.state = 201
            self.varlist()
            self.state = 202
            self.expr()
            self.state = 203
            self.match(CSlangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CSlangParser.COMMA)
            else:
                return self.getToken(CSlangParser.COMMA, i)

        def identifier_name(self):
            return self.getTypedRuleContext(CSlangParser.Identifier_nameContext,0)


        def varlist(self):
            return self.getTypedRuleContext(CSlangParser.VarlistContext,0)


        def expr(self):
            return self.getTypedRuleContext(CSlangParser.ExprContext,0)


        def COLON(self):
            return self.getToken(CSlangParser.COLON, 0)

        def type_att(self):
            return self.getTypedRuleContext(CSlangParser.Type_attContext,0)


        def EQ(self):
            return self.getToken(CSlangParser.EQ, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_varlist




    def varlist(self):

        localctx = CSlangParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_varlist)
        try:
            self.state = 215
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [41]:
                self.enterOuterAlt(localctx, 1)
                self.state = 205
                self.match(CSlangParser.COMMA)
                self.state = 206
                self.identifier_name()
                self.state = 207
                self.varlist()
                self.state = 208
                self.expr()
                self.state = 209
                self.match(CSlangParser.COMMA)
                pass
            elif token in [43]:
                self.enterOuterAlt(localctx, 2)
                self.state = 211
                self.match(CSlangParser.COLON)
                self.state = 212
                self.type_att()
                self.state = 213
                self.match(CSlangParser.EQ)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_attContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(CSlangParser.Primitive_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(CSlangParser.Array_typeContext,0)


        def class_type(self):
            return self.getTypedRuleContext(CSlangParser.Class_typeContext,0)


        def getRuleIndex(self):
            return CSlangParser.RULE_type_att




    def type_att(self):

        localctx = CSlangParser.Type_attContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_type_att)
        try:
            self.state = 220
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8, 9, 10, 11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 217
                self.primitive_type()
                pass
            elif token in [47]:
                self.enterOuterAlt(localctx, 2)
                self.state = 218
                self.array_type()
                pass
            elif token in [58]:
                self.enterOuterAlt(localctx, 3)
                self.state = 219
                self.class_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primitive_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(CSlangParser.INT, 0)

        def FLOAT(self):
            return self.getToken(CSlangParser.FLOAT, 0)

        def BOOL(self):
            return self.getToken(CSlangParser.BOOL, 0)

        def STRING(self):
            return self.getToken(CSlangParser.STRING, 0)

        def getRuleIndex(self):
            return CSlangParser.RULE_primitive_type




    def primitive_type(self):
